Occasionally, hundreds of tests fail with small text diffs on Mavericks https://bugs.webkit.org/show_bug.cgi?id=124312

Reviewed by Alexey Proskuryakov.

Try reverting the part of r158652 that deleted all of the persistent
defaults, in the thought that there might be some sort of race between
processes causing some settings to be left in the wrong state.

* DumpRenderTree/mac/DumpRenderTree.mm:
(setDefaultsToConsistentValuesForTesting):
* WebKitTestRunner/mac/main.mm:
(setDefaultsToConsistentValuesForTesting):


Canonical link: https://commits.webkit.org/142631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159364 268f45cc-cd09-0410-ab3c-d52691b4dbfc