Tools/WebKitTestRunner/mac/main.mm
@@ -29,8 +29,6 @@
 
 static void setDefaultsToConsistentValuesForTesting()
 {
-    [[NSUserDefaults standardUserDefaults] removePersistentDomainForName:@"WebKitTestRunner"];
-
     NSDictionary *dict = @{
         @"AppleKeyboardUIMode": @1,
         @"AppleMagnifiedMode": @YES,
